[gd_scene load_steps=9 format=3 uid="uid://y7go1fv6pbns"]

[ext_resource type="Script" path="res://Scripts/Camera3DController.gd" id="1_13c2l"]
[ext_resource type="Shader" path="res://Shaders/sceneTransition.gdshader" id="2_83yi2"]
[ext_resource type="Script" path="res://Scripts/TextController.gd" id="2_m6tbe"]
[ext_resource type="FontFile" uid="uid://kylqcoobnw06" path="res://Fonts/pokemon-rs.ttf" id="3_lg0bn"]
[ext_resource type="Texture2D" uid="uid://62k8xld60e5q" path="res://Sprites/UI/Textbox.png" id="4_rt5if"]
[ext_resource type="Texture2D" uid="uid://c6jgaipws28ux" path="res://Sprites/Objects/PokeBall.png" id="6_7ii8q"]
[ext_resource type="Script" path="res://Scripts/PauseController.gd" id="6_8aesq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pmv25"]
shader = ExtResource("2_83yi2")
shader_parameter/progress = 1.0
shader_parameter/fadeOut = false
shader_parameter/diamondPixelSize = 60.0

[node name="CameraOW" type="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 10.9938, 19.6938)
projection = 1
size = 9.5
far = 150.0
script = ExtResource("1_13c2l")
followPlayer = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_pmv25")
offset_right = 1277.0
offset_bottom = 721.0
scale = Vector2(1.24, 1.16)
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="DialogBox" type="Control" parent="."]
z_index = 50
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -229.0
offset_top = -236.0
offset_right = -229.0
offset_bottom = -236.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.2, 1.2)
script = ExtResource("2_m6tbe")

[node name="NinePatchRect" type="NinePatchRect" parent="DialogBox"]
layout_mode = 0
offset_left = -19.0
offset_top = 42.0
offset_right = 482.0
offset_bottom = 173.0
texture = ExtResource("4_rt5if")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Textbox" type="Label" parent="DialogBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.0
offset_top = 53.0
offset_right = 471.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = " Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum placerat tincidunt arcu at rhoncus. Sed dictum enim quis libero elementum, sit amet cursus dui aliquam. Sed placerat feugiat orci, id consectetur magna. Suspendisse sagittis commodo eros, quis malesuada nisi vehicula vel. Maecenas consequat leo ac turpis laoreet, at mollis enim dignissim. Sed pellentesque dapibus ante, pretium rutrum felis tempor a. Integer scelerisque laoreet nisl, vitae pellentesque velit lacinia vel. Suspendisse elementum hendrerit orci sit amet bibendum. Phasellus eget dui convallis, ultrices sapien eu, dignissim justo. Fusce ante nisl, dictum sed ultrices ut, fermentum nec quam. Nullam sit amet odio elit. Suspendisse potenti. Ut dui felis, sodales vel orci ac, cursus gravida nulla. "
autowrap_mode = 2
text_overrun_behavior = 3

[node name="TextArrow" type="Label" parent="DialogBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.0
offset_top = 50.0
offset_right = 475.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "â†’"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 2
text_overrun_behavior = 3

[node name="PauseMenu" type="Control" parent="."]
unique_name_in_owner = true
z_index = 50
layout_direction = 2
layout_mode = 3
anchors_preset = 0
offset_left = 59.0
offset_top = -8.0
offset_right = 59.0
offset_bottom = -8.0
mouse_filter = 2
script = ExtResource("6_8aesq")

[node name="NinePatchRect" type="NinePatchRect" parent="PauseMenu"]
layout_mode = 0
offset_left = -23.0
offset_top = 39.0
offset_right = 298.0
offset_bottom = 528.0
scale = Vector2(0.64, 1)
texture = ExtResource("4_rt5if")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="TrainerButton" type="Button" parent="PauseMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -4.0
offset_top = 60.0
offset_right = 162.6
offset_bottom = 106.0
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 35
text = " Trainer"
alignment = 0

[node name="Icon" type="TextureRect" parent="PauseMenu/TrainerButton"]
layout_mode = 0
offset_left = 127.0
offset_top = 8.0
offset_right = 157.0
offset_bottom = 38.0
texture = ExtResource("6_7ii8q")

[node name="PartyButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = -4.0
offset_top = 120.0
offset_right = 162.6
offset_bottom = 166.0
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 35
text = " Party"
alignment = 0

[node name="Icon" type="TextureRect" parent="PauseMenu/PartyButton"]
layout_mode = 0
offset_left = 127.0
offset_top = 8.0
offset_right = 157.0
offset_bottom = 38.0
texture = ExtResource("6_7ii8q")

[node name="DexButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = -4.0
offset_top = 181.0
offset_right = 162.6
offset_bottom = 227.0
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 35
text = " Dex"
alignment = 0

[node name="Icon" type="TextureRect" parent="PauseMenu/DexButton"]
layout_mode = 0
offset_left = 127.0
offset_top = 8.0
offset_right = 157.0
offset_bottom = 38.0
texture = ExtResource("6_7ii8q")

[node name="BagButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = -4.0
offset_top = 240.0
offset_right = 162.6
offset_bottom = 286.0
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 35
text = " Bag"
alignment = 0

[node name="Icon" type="TextureRect" parent="PauseMenu/BagButton"]
layout_mode = 0
offset_left = 127.0
offset_top = 8.0
offset_right = 157.0
offset_bottom = 38.0
texture = ExtResource("6_7ii8q")

[node name="SettingsButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = -4.0
offset_top = 298.0
offset_right = 162.6
offset_bottom = 344.0
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 35
text = " Settings"
alignment = 0

[node name="Icon" type="TextureRect" parent="PauseMenu/SettingsButton"]
layout_mode = 0
offset_left = 127.0
offset_top = 8.0
offset_right = 157.0
offset_bottom = 38.0
texture = ExtResource("6_7ii8q")

[node name="ExitButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = -4.0
offset_top = 461.0
offset_right = 162.6
offset_bottom = 507.0
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 35
text = " Exit"
alignment = 0

[node name="Icon" type="TextureRect" parent="PauseMenu/ExitButton"]
layout_mode = 0
offset_left = 127.0
offset_top = 8.0
offset_right = 157.0
offset_bottom = 38.0
texture = ExtResource("6_7ii8q")

[node name="TrainerMenu" type="Control" parent="."]
unique_name_in_owner = true
z_index = 50
layout_direction = 2
layout_mode = 3
anchors_preset = 0
offset_left = 270.0
offset_top = -8.0
offset_right = 270.0
offset_bottom = -8.0

[node name="NinePatchRect" type="NinePatchRect" parent="TrainerMenu"]
layout_mode = 0
offset_left = -23.0
offset_top = 39.0
offset_right = 298.0
offset_bottom = 528.0
texture = ExtResource("4_rt5if")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Trainer" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.00003
offset_top = 50.0
offset_right = 281.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Name: N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Money" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.00003
offset_top = 100.0
offset_right = 281.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Money: 0$"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Items" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.99998
offset_top = 152.0
offset_right = 281.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Items Held: 0"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="ItemList" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.75
offset_top = 193.25
offset_right = 282.25
offset_bottom = 300.25
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 20
text = "N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Pokemon" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.49998
offset_top = 276.0
offset_right = 282.5
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "PokÃ©mon Caught: 0"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="PokemonList" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.49998
offset_top = 317.25
offset_right = 282.5
offset_bottom = 424.25
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 20
text = "N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="LastPosition" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.49999
offset_top = 430.0
offset_right = 282.5
offset_bottom = 537.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Last Position: (0,0)"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="LastScene" type="Label" parent="TrainerMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -6.24999
offset_top = 478.75
offset_right = 283.75
offset_bottom = 585.75
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Last Scene: N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="PartyMenu" type="Control" parent="."]
unique_name_in_owner = true
z_index = 50
layout_direction = 2
layout_mode = 3
anchors_preset = 0
offset_left = 270.0
offset_top = -8.0
offset_right = 270.0
offset_bottom = -8.0

[node name="NinePatchRect" type="NinePatchRect" parent="PartyMenu"]
layout_mode = 0
offset_left = -23.0
offset_top = 39.0
offset_right = 298.0
offset_bottom = 528.0
texture = ExtResource("4_rt5if")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Trainer" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.00003
offset_top = 50.0
offset_right = 281.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Name: N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Money" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -9.00003
offset_top = 100.0
offset_right = 281.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Money: 0$"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Items" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.99998
offset_top = 152.0
offset_right = 281.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Items Held: 0"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="ItemList" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.75
offset_top = 193.25
offset_right = 282.25
offset_bottom = 300.25
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 20
text = "N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="Pokemon" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.49998
offset_top = 276.0
offset_right = 282.5
offset_bottom = 383.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "PokÃ©mon Caught: 0"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="PokemonList" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.49998
offset_top = 317.25
offset_right = 282.5
offset_bottom = 424.25
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 20
text = "N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="LastPosition" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.49999
offset_top = 430.0
offset_right = 282.5
offset_bottom = 537.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Last Position: (0,0)"
autowrap_mode = 2
text_overrun_behavior = 3

[node name="LastScene" type="Label" parent="PartyMenu"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -6.24999
offset_top = 478.75
offset_right = 283.75
offset_bottom = 585.75
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_fonts/font = ExtResource("3_lg0bn")
theme_override_font_sizes/font_size = 28
text = "Last Scene: N/A"
autowrap_mode = 2
text_overrun_behavior = 3

[connection signal="pressed" from="PauseMenu/TrainerButton" to="PauseMenu" method="_on_trainer_button_pressed"]
[connection signal="pressed" from="PauseMenu/PartyButton" to="PauseMenu" method="_on_party_button_pressed"]
[connection signal="pressed" from="PauseMenu/ExitButton" to="PauseMenu" method="_on_exit_button_pressed"]
